# cannulation-ml

./: .gitignore  PLAN.md  README.md  csv_template_phase1_classification.csv  pyproject.toml
cannulation/: __init__.py  analyzer.py  datasets.py  efficiency.py  embedding_metrics.py  evaluation.py  hooks.py  model.py  runner.py  trainer.py  tuner.py  visualizer.py  web.py
cannulation/templates/: base.html  index.html  run.html
