[project]
name = "cannulation-ml"
version = "0.1.0"
description = "Peer inside the ML learning process — analytics, visualization, and self-improving feedback loops"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
]

[project.scripts]
cannulation = "cannulation.runner:main"
cannulation-web = "cannulation.web:start"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cannulation"]
